[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/font/Writing.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Start.png" type="Texture" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://Start_screen.gd" type="Script" id=4]
[ext_resource path="res://assets/prefabs/player/PlayerAnimated.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/arrow_menu.png" type="Texture" id=6]
[ext_resource path="res://assets/icon.png" type="Texture" id=7]
[ext_resource path="res://assets/arrow_basic.png" type="Texture" id=8]
[ext_resource path="res://assets/arrow.png" type="Texture" id=9]
[ext_resource path="res://assets/touch_clavier.png" type="Texture" id=10]
[ext_resource path="res://assets/arrow_white_light.png" type="Texture" id=11]
[ext_resource path="res://assets/arrow_empty_light.png" type="Texture" id=12]
[ext_resource path="res://assets/font/Abuget.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://assets/marins_small.png" type="Texture" id=14]
[ext_resource path="res://assets/marins_small2.png" type="Texture" id=15]
[ext_resource path="res://assets/touch_clavier_white.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 13 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "Right",
"speed": 2.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "Left",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "Sailors",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 13 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 10 ) ],
"loop": true,
"name": "left",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 16 ) ],
"loop": true,
"name": "right",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = ExtResource( 13 )

[node name="Start_screen" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_button" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -293.5
margin_top = 0.827217
margin_right = 317.5
margin_bottom = 279.827
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title_button"]
margin_left = 20.0
margin_top = 100.0
margin_right = 591.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dive Dive Revolution"
align = 1

[node name="Start" type="TextureButton" parent="."]
anchor_left = 0.505
anchor_top = 0.336
anchor_right = 0.505
anchor_bottom = 0.336
margin_left = -97.8308
margin_top = -95.1553
margin_right = 292.169
margin_bottom = 120.846
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 336.656, 389.007 )
scale = Vector2( 0.7, 0.7 )

[node name="Oxygen" type="Sprite" parent="Player"]
position = Vector2( 344.427, 252.066 )
texture = ExtResource( 7 )

[node name="arrow_menu" type="Sprite" parent="Player"]
position = Vector2( 170.467, -32.4769 )
rotation = 0.150098
scale = Vector2( 0.590134, 0.570217 )
texture = ExtResource( 6 )

[node name="Left" type="Sprite" parent="Player"]
position = Vector2( -91.292, 83.8354 )
scale = Vector2( 0.8, 1 )
texture = ExtResource( 8 )

[node name="Right" type="Sprite" parent="Player"]
position = Vector2( 125.685, 83.0787 )
rotation = -3.14159
scale = Vector2( 0.8, -1 )
texture = ExtResource( 8 )

[node name="A" type="Label" parent="Player"]
margin_left = -115.41
margin_top = 83.7046
margin_right = -43.4097
margin_bottom = 172.704
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A/Q"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="Label" parent="Player"]
margin_left = 83.7505
margin_top = 79.1662
margin_right = 138.751
margin_bottom = 168.166
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StayAlive" type="Label" parent="."]
margin_left = 42.5981
margin_top = 477.008
margin_right = 596.598
margin_bottom = 658.008
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Make sure you always have oxygen"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeepTheBeat" type="Label" parent="."]
margin_left = 355.22
margin_top = 581.859
margin_right = 696.22
margin_bottom = 676.859
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "So keep the beat ! "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowLeft" type="AnimatedSprite" parent="."]
position = Vector2( 484.37, 668.633 )
rotation = -1.5708
frames = SubResource( 3 )
animation = "Left"
frame = 1

[node name="ArrowRight" type="AnimatedSprite" parent="."]
position = Vector2( 574.555, 667.966 )
rotation = 1.5708
frames = SubResource( 3 )
animation = "Right"

[node name="Sailors" type="AnimatedSprite" parent="."]
position = Vector2( 137.502, 703.903 )
scale = Vector2( 0.685472, 0.685472 )
frames = SubResource( 4 )
animation = "Sailors"

[node name="ItsYou" type="Label" parent="."]
margin_left = 420.131
margin_top = 303.722
margin_right = 564.131
margin_bottom = 392.722
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "It 's you !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys_left" type="AnimatedSprite" parent="."]
position = Vector2( 498.252, 748.891 )
rotation = 1.5708
scale = Vector2( 0.5, -0.5 )
frames = SubResource( 6 )
animation = "left"

[node name="Keys_right" type="AnimatedSprite" parent="."]
position = Vector2( 561.647, 748.556 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )
animation = "right"

[node name="TouchesA_D" type="Label" parent="."]
margin_left = 77.0356
margin_top = 323.856
margin_right = 283.036
margin_bottom = 430.856
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Use A/Q and D to move and collect coins"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow_menu_move2" type="Sprite" parent="."]
position = Vector2( 429.671, 735.714 )
rotation = 4.11374
scale = Vector2( 0.288, 0.278 )
texture = ExtResource( 6 )

[node name="TouchesL_R" type="Label" parent="."]
margin_left = 252.449
margin_top = 670.736
margin_right = 455.449
margin_bottom = 763.736
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Use your arrows to hit the beat"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key_up" type="Sprite" parent="."]
position = Vector2( 529.64, 716.522 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Key_down" type="Sprite" parent="."]
position = Vector2( 530.307, 748.891 )
scale = Vector2( 0.5, -0.5 )
texture = ExtResource( 10 )
